# minishell

./: .gitignore  4  CMakeLists.txt  Makefile  README.md  a.out  ft_create_here_doc.c  here_doc  main.c  minishell  test.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
hdrs/: minishell.h
minishell.dSYM/Contents/Resources/DWARF/: minishell
srcs/: do_stuff.c  ft_catch_sign.c  ft_clear.c  ft_cmd.c  ft_init.c  ft_lst.c  ft_open_fd.c  ft_pip_exe_fork.c  ft_remove_cov.c  ft_split_av.c  ft_str_for_cmd.c  ft_strcpy.c  ft_strdup.c  ft_strlen.c  pipes_stuff.c  redirs.c  remove_quotes.c  remove_quotes_utils.c  replace_dollar_signs.c  signals.c
srcs/builtins/: 0.dup_envp_to_list.c  0.utils.c  builtins_handler.c  cd.c  echo.c  env.c  exit.c  export.c  pwd.c  unset.c
srcs/libfts/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_itoa_uns.c  ft_lstadd_back.c  ft_lstclear.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c  ft_memmove.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_realloc.c  ft_split.c  ft_strchr.c  ft_strchr_count.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strncmp.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  get_next_line.c
srcs/pipex/: ft_check_fd.c  ft_child.c  ft_exe.c  ft_keyb_in.c  ft_pipex.c  ft_spliting.c
